--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,43 @@
     box-shadow: 0px 20px 36px 5px rgba(0, 0, 0, 0.2);
     border-radius: 12px;
     padding: 25px; }
-    .container__card .card .card-cube {
-      width: 100%;
-      border-radius: 8px; }
+    .container__card .card .card-img {
+      position: relative; }
+      .container__card .card .card-img .card-cube {
+        display: block;
+        width: 100%;
+        border-radius: 8px; }
+      .container__card .card .card-img .img-view {
+        position: absolute;
+        top: 42%;
+        left: 42%;
+        height: 100%;
+        width: 100%;
+        background-image: url(../images/icon-view.svg);
+        background-repeat: no-repeat;
+        opacity: 0; }
+        .container__card .card .card-img .img-view .overlay {
+          position: absolute;
+          top: 45%;
+          left: 50%;
+          transform: translate(-92%, -87%);
+          width: 100%;
+          height: 300px;
+          background-color: #00fff7;
+          border-radius: 8px;
+          opacity: 0; }
+      .container__card .card .card-img:hover .card-cube {
+        opacity: .5; }
+      .container__card .card .card-img:hover .img-view {
+        opacity: 1; }
+      .container__card .card .card-img:hover .overlay {
+        opacity: 0.3; }
     .container__card .card h3 {
       width: 100%;
       padding: 20px 0;
       font-size: 20px; }
+      .container__card .card h3:hover {
+        color: #00fff7; }
     .container__card .card p {
       font-size: 18px;
       font-weight: 300;
@@ -59,6 +89,8 @@
       .container__card .card .card__user p {
         font-size: 15px;
         padding-left: 15px; }
+      .container__card .card .card__user span:hover {
+        color: #00fff7; }
 
 * {
   margin: 0;
