--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -4,6 +4,7 @@
     align-items: center;
     height: 100vh;
     .card{
+        //position: relative;
         display: flex;
         justify-content: center;
         flex-direction: column;
@@ -13,14 +14,53 @@
         box-shadow: 0px 20px 36px 5px rgba(0,0,0,0.2);
         border-radius: 12px;
         padding: 25px;
-        .card-cube{
-            width: 100%;
-            border-radius: 8px;
+        .card-img{
+            position: relative;
+            .card-cube{
+                display: block;
+                width: 100%;
+                border-radius: 8px;
+            }
+            .img-view{
+                position: absolute;
+                top: 42%;
+                left: 42%;
+                height: 100%;
+                width: 100%;
+                background-image: url(../images/icon-view.svg);
+                background-repeat: no-repeat;
+                opacity: 0;
+                .overlay{
+                    position: absolute;
+                    top: 45%;
+                    left: 50%;
+                    transform: translate(-92%, -87%);
+                    width: 100%;
+                    height: 300px;
+                    background-color: $cyan;
+                    border-radius: 8px;
+                    opacity: 0;
+                }
+            }
+            &:hover{
+                .card-cube{
+                    opacity: .5;
+                }
+                .img-view{
+                    opacity: 1;
+                }
+                .overlay{
+                    opacity: 0.3;
+                }
+            }
         }
         h3{
             width: 100%;
             padding: 20px 0;
             font-size: 20px;
+            &:hover{
+                color: $cyan;
+            }
         }
         p{
             font-size: 18px;
@@ -68,6 +108,11 @@
             p{
                 font-size: 15px;
                 padding-left: 15px;
+            }
+            span{
+                &:hover{
+                    color: $cyan;
+                }
             }
         }
     }
